# Prog2_Uebungsblatt2

./: .gitignore  CMakeLists.txt  makeme.sh
include/: baustein.hpp  halbaddierer.hpp  oder2.hpp  schaltung.hpp  schnittstelle.hpp  und2.hpp  volladdierer.hpp  volladierer.hpp  xor2.hpp
src/: main.cpp
